--- a/views/app.ejs
+++ b/views/app.ejs
@@ -57,6 +57,7 @@
 		<script type="text/javascript" src="js/sounds-manager.js"></script>
 		<script type="text/javascript" src="js/enhancements.js"></script>
 		<script type="text/javascript" src="js/metronome.js"></script>
+		<script type="text/javascript" src="js/modal.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 
 	</body>
