made some minor css fixes - set track__data to follow flex-shrink: 0 to maintain correct layout - increased width of track name input field, which became too small by the earlier fix - fixed the line height of the audio select h3, which was causing the volume slider of a track to move a few pixels down while toggling

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -54,6 +54,7 @@ body {
   .track__data {
     position: relative;
     flex-basis: 280px;
+    flex-shrink: 0;
     text-align: right;
     color: #B3B3B3;
     padding-top: 20px;
@@ -144,7 +145,7 @@ body {
     .track__volume .volume-slider {
       flex-basis: 100%; }
   .track .toggle-edit input {
-    width: 160px;
+    width: 225px;
     text-align: right;
     border-bottom: 1px solid #9E9E9E;
     margin-top: -1px; }
@@ -155,6 +156,8 @@ body {
     margin-top: -1px; }
     .track .toggle-edit.is-edit > input {
       display: inline-block; }
+  .track .audio-select h3 {
+    line-height: 20px; }
   .track .audio-select select {
     display: none; }
   .track .audio-select.select select {
