--- a/scss/components/_track.scss
+++ b/scss/components/_track.scss
@@ -14,6 +14,7 @@
 	&__data {
 		position: relative;
 		flex-basis: 280px;
+		flex-shrink: 0;
 		text-align: right;
 		color: $grey-medium-light;
 		padding-top: 20px;
@@ -160,7 +161,7 @@
 	.toggle-edit {
 
 		input {
-			width: 160px;
+			width: 225px;
 			text-align: right;
 			border-bottom: 1px solid $grey-medium;
 			margin-top: -1px;
@@ -182,9 +183,9 @@
 	}
 
 	.audio-select {
-		select {
-			display: none;
-		}
+
+		h3 { line-height: 20px; }
+		select { display: none; }
 
 		&.select {
 			select {
