minor css fix - spaced the play-controls with 5px from each other

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -226,6 +226,8 @@ body {
     color: #505050; }
   .play-controls.is-playing .play a:before {
     content: "\f28c"; }
+  .app-bar .play-controls li:not(:first-child) {
+    margin-left: 5px; }
 
 .input-bpm input {
   -webkit-appearance: none;
