--- a/views/app.ejs
+++ b/views/app.ejs
@@ -1,63 +1,16 @@
-<!doctype html>
-<html>
-	<head>
-		<title>BeatSequencer</title>
-		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/app.css" />
-	</head>
-	<body>
+<main id="project">
+	
+	<% include partials/header %>
 
-		<main id="project">
-			<header id="project-header" class="app-bar">
-				<ul class="app-bar__items">
-					<li>
-						<h1 class="app-bar__title toggle-edit">
-							<input />
-							<span>My awesome beat</span>
-							<a href="#" class="app-bar__title--action fa fa-pencil toggle"></a>
-						</h1>
-					</li>
-					<li>
-						<div class="input-bpm">
-							<input type="number" value="128" id="bpm" />
-							<span>BPM</span>
-						</div>
-					</li>
-					<li class="app-bar__items--right">
-						<ul class="play-controls">
-							<li class="play-controls__control play">
-								<a href="#" class="fa fa-play-circle-o"></a>
-							</li>
-							<li class="play-controls__control stop">
-								<a href="#" class="fa fa-stop-circle-o"></a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-			</header>
+	<section id="project-window">
+		<span class="project-tracks"></span>
 
-			<section id="project-window">
-				<span class="project-tracks"></span>
+		<div class="track track__new" href="#">
+			<div class="track__new--inner">
+				<a href="#"><i class="fa fa-plus-circle"></i></a>
+			</div>
+		</div>
 
-				<div class="track track__new" href="#">
-					<div class="track__new--inner">
-						<a href="#"><i class="fa fa-plus-circle"></i></a>
-					</div>
-				</div>
+	</section>
 
-			</section>
-
-		</main>
-
-		<script type="text/javascript" src="js/jquery-2.2.1.min.js"></script>
-		<script type="text/javascript" src="js/handlebars-v4.0.5.js"></script>
-		<script type="text/javascript" src="js/templates-manager.js"></script>
-		<script type="text/javascript" src="js/tracks-manager.js"></script>
-		<script type="text/javascript" src="js/sounds-manager.js"></script>
-		<script type="text/javascript" src="js/enhancements.js"></script>
-		<script type="text/javascript" src="js/metronome.js"></script>
-		<script type="text/javascript" src="js/app.js"></script>
-
-	</body>
-</html>
+</main>
