created the data store - added a new module to the application scope - sets up containers - tries to create an object from a container when called - setters and getters

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,7 @@
 		<%- body %>
 		<% include partials/bower-scripts %>
 		<script type="text/javascript" src="js/templates-manager.js"></script>
+		<script type="text/javascript" src="js/store.js"></script>
 		<script type="text/javascript" src="js/tracks-manager.js"></script>
 		<script type="text/javascript" src="js/sounds-manager.js"></script>
 		<script type="text/javascript" src="js/enhancements.js"></script>
